# 3phase_engine

./: CMakeLists.txt  Makefile  ample_freq.txt  cmd.c  code-c.c  code.asm  code.c  code.kdev4  eeprom.txt  mkee.c  mksin.c  pwm.h  sin.txt  uart-comm.c  uart.c  uart.h
